@@ -1,3 +1,6 @@
+09/13/19
+* Add Shader abstract class + OpenGL implementation.
+
 09/12/19
 * Add stb library.
 * Add Texture2D OpenGL implementation.
